test/classes/errors/nilability-init-var/init-var-nonnil-borrowed-from-nonnil-borrowed.chpl
//  lhs: borrowed!  rhs: borrowed!  ok

class MyClass {
  var x: int;
}

var rhs = new borrowed MyClass();

var lhs: borrowed MyClass = rhs;


